--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
       </nav>
       <main>
-        <section class="row p-5 mb-0 bg-black">
+        <section class="row p-5 mb-0 text-light bg-dark">
             <img src="./imagenes/banner.jpg" alt="..." width="50" height="400" >
             <h1 id="title">Mandala</h1>
             <h2 id="inf">Nos dedicamos a la realizacion de regalos
