--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </nav>
       <main>
         <section class="row p-5 mb-0 text-light bg-dark">
-            <img src="./imagenes/banner.jpg" alt="..." width="50" height="400" >
+            <img class="redimension" src="./imagenes/banner.jpg" alt="...">
             <h1 id="title">Mandala</h1>
             <h2 id="inf">Nos dedicamos a la realizacion de regalos
                 unicos personalizados, con obsequios elegidos
