--- a/index.html
+++ b/index.html
@@ -167,23 +167,23 @@
           </div>
       </div>
     </div>
-    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4">
+    <div class="row-cols-2" style="display: flex;">
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner align-items-center">
-            <div class="carousel-item active">
-                <img src="./imagenes/p1.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-item active"> 
+                <img src="./imagenes/p1.jpg" class="d-block w-50" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="./imagenes/p2.jpg" class="d-block w-100" alt="...">
+                <img src="./imagenes/p2.jpg" class="d-block w-50" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="./imagenes/p3.jpg" class="d-block w-100" alt="...">
+                <img src="./imagenes/p3.jpg" class="d-block w-50" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="./imagenes/p4.jpg" class="d-block w-100" alt="...">
+                <img src="./imagenes/p4.jpg" class="d-block w-50" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="./imagenes/p5.jpg" class="d-block w-100" alt="...">
+                <img src="./imagenes/p5.jpg" class="d-block w-50" alt="...">
             </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -195,10 +195,8 @@
             <span class="visually-hidden">Siguiente</span>
             </button>
         </div>
-    </div>
-    <div class="container">
-        <h1 class="display" id="contac">Contáctanos</h1>
         <form action="#" class="sm:max-w-xl sm:mx-auto lg:mx-0">
+          <h1 class="display" id="contac">Contáctanos</h1>
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Email:</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ingresa tu correo electronico">
@@ -212,8 +210,7 @@
             </p>
           <p class="mt-3 text-sm text-gray-300 sm:mt-4">En breve te contactaremos para hacerte llegar tu cotizacion </p>
         </form>
-      </div>
-
+    </div>
       <div class="row">
         <footer class="py-3 my-4">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
